data/issues_nolabel/nolabel_test_18363.txt
Won't build on Ubuntu 16, CUDA 9.0

I've tried to build TF from source, a number of times over the span of a week, each day pulling the latest TF.  I've tried gcc and I've tried clang.  With gcc it fails near the end.  If needed I'll open a separate issue for clang (the error is very different)
First I'll give configuration, then the FAIL output.
Configuration

bazel 0.11.1
python3.5 (/home/ubuntu/envs/med/lib/python3.5/site-packages)
jemalloc
No Google Cloud Platform support
No Hadoop File System support
Amazon S3 File System support enabled
No Apache Kafka Platform support
No XLA JIT support
No GDR support
No VERBS support
No OpenCL SYCL support
CUDA support
CUDA SDK 9.0
cuDNN version 7.0
TensorRT support will be enabled
NCCL 1.3
Nvidia compute capability 7.0
nvcc will be used as CUDA compiler
MPI support will be enabled for TensorFlow.
optimization flags during compilation when bazel option "--config=opt": -march=native
Not configuring the WORKSPACE for Android builds.

Latest fail output:
... (many warnings before this)
./tensorflow/core/kernels/cwise_ops.h(199): warning: device annotation on a defaulted function("scalar_right") is ignored
./tensorflow/core/kernels/cwise_ops.h(169): warning: host annotation on a defaulted function("scalar_left") is ignored
./tensorflow/core/kernels/cwise_ops.h(169): warning: device annotation on a defaulted function("scalar_left") is ignored
./tensorflow/core/kernels/cwise_ops.h(199): warning: host annotation on a defaulted function("scalar_right") is ignored
./tensorflow/core/kernels/cwise_ops.h(199): warning: device annotation on a defaulted function("scalar_right") is ignored
INFO: From Compiling tensorflow/core/kernels/data/repeat_dataset_op.cc:
tensorflow/core/kernels/data/repeat_dataset_op.cc: In member function 'virtual void tensorflow::{anonymous}::RepeatDatasetOp::MakeDataset(tensorflow::OpKernelContext*, tensorflow::DatasetBase*, tensorflow::DatasetBase**)':
tensorflow/core/kernels/data/repeat_dataset_op.cc:45:61: warning: 'count' may be used uninitialized in this function [-Wmaybe-uninitialized]
: GraphDatasetBase(ctx), count_(count), input_(input) {
^
tensorflow/core/kernels/data/repeat_dataset_op.cc:36:11: note: 'count' was declared here
int64 count;
^
INFO: From Compiling tensorflow/core/kernels/cwise_op_gpu_bitwise_and.cu.cc:
./tensorflow/core/kernels/cwise_ops.h(169): warning: host annotation on a defaulted function("scalar_left") is ignored
./tensorflow/core/kernels/cwise_ops.h(169): warning: device annotation on a defaulted function("scalar_left") is ignored
./tensorflow/core/kernels/cwise_ops.h(199): warning: host annotation on a defaulted function("scalar_right") is ignored
./tensorflow/core/kernels/cwise_ops.h(199): warning: device annotation on a defaulted function("scalar_right") is ignored
./tensorflow/core/kernels/cwise_ops.h(169): warning: host annotation on a defaulted function("scalar_left") is ignored
./tensorflow/core/kernels/cwise_ops.h(169): warning: device annotation on a defaulted function("scalar_left") is ignored
./tensorflow/core/kernels/cwise_ops.h(199): warning: host annotation on a defaulted function("scalar_right") is ignored
./tensorflow/core/kernels/cwise_ops.h(199): warning: device annotation on a defaulted function("scalar_right") is ignored
INFO: From ProtoCompile tensorflow/core/debug/debugger_event_metadata.pb.cc:
bazel-out/k8-py3-opt/genfiles/external/protobuf_archive/src: warning: directory does not exist.
INFO: From ProtoCompile tensorflow/contrib/mpi/mpi_msg.pb.cc:
bazel-out/k8-py3-opt/genfiles/external/protobuf_archive/src: warning: directory does not exist.
bazel-out/k8-py3-opt/genfiles/external/protobuf_archive/src: warning: directory does not exist.
bazel-out/k8-py3-opt/genfiles/external/protobuf_archive/src: warning: directory does not exist.
INFO: From ProtoCompile tensorflow/python/framework/cpp_shape_inference.pb.cc:
bazel-out/k8-py3-opt/genfiles/external/protobuf_archive/src: warning: directory does not exist.
bazel-out/k8-py3-opt/genfiles/external/protobuf_archive/src: warning: directory does not exist.
INFO: From ProtoCompile tensorflow/core/debug/debug_service.pb.cc:
bazel-out/k8-py3-opt/genfiles/external/protobuf_archive/src: warning: directory does not exist.
bazel-out/k8-py3-opt/genfiles/external/protobuf_archive/src: warning: directory does not exist.
bazel-out/k8-py3-opt/genfiles/external/protobuf_archive/src: warning: directory does not exist.
bazel-out/k8-py3-opt/genfiles/external/protobuf_archive/src: warning: directory does not exist.
bazel-out/k8-py3-opt/genfiles/external/protobuf_archive/src: warning: directory does not exist.
INFO: From Compiling tensorflow/core/grappler/optimizers/graph_optimizer_stage.cc:
tensorflow/core/grappler/optimizers/graph_optimizer_stage.cc: In function 'tensorflow::Status tensorflow::grappler::GetTensorProperties(const tensorflow::grappler::GraphOptimizerContext&, const string&, tensorflow::OpInfo::TensorProperties*)':
tensorflow/core/grappler/optimizers/graph_optimizer_stage.cc:60:32: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
if (num_outputs == 0 || port > num_outputs - 1) {
^
ERROR: /home/ubuntu/downloads/tensorflow/tensorflow/contrib/mpi/BUILD:60:1: C++ compilation of rule '//tensorflow/contrib/mpi:mpi_rendezvous_mgr' failed (Exit 1)
In file included from ./tensorflow/contrib/mpi/mpi_rendezvous_mgr.h:34:0,
from tensorflow/contrib/mpi/mpi_rendezvous_mgr.cc:18:
./tensorflow/contrib/mpi/mpi_utils.h: In member function 'const int tensorflow::MPIUtils::GetSourceID(const string&) const':
./tensorflow/contrib/mpi/mpi_utils.h:49:11: error: 'FATAL' was not declared in this scope
LOG(FATAL) << "Failed to convert worker name to MPI index: " << task_id;
^
./tensorflow/contrib/mpi/mpi_utils.h:49:16: error: 'LOG' was not declared in this scope
LOG(FATAL) << "Failed to convert worker name to MPI index: " << task_id;
^
In file included from ./tensorflow/core/lib/strings/strcat.h:27:0,
from ./tensorflow/core/lib/strings/str_util.h:23,
from ./tensorflow/contrib/mpi/mpi_utils.h:25,
from ./tensorflow/contrib/mpi/mpi_rendezvous_mgr.h:34,
from tensorflow/contrib/mpi/mpi_rendezvous_mgr.cc:18:
./tensorflow/core/util/tensor_format.h: In instantiation of 'T tensorflow::GetTensorDim(tensorflow::gtl::ArraySlice, tensorflow::TensorFormat, char) [with T = long long int]':
./tensorflow/core/util/tensor_format.h:372:47:   required from here
./tensorflow/core/util/tensor_format.h:340:29: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
CHECK(index >= 0 && index < dimension_attributes.size())
^
./tensorflow/core/platform/macros.h:82:47: note: in definition of macro 'TF_PREDICT_FALSE'
#define TF_PREDICT_FALSE(x) (__builtin_expect(x, 0))
^
./tensorflow/core/util/tensor_format.h:340:3: note: in expansion of macro 'CHECK'
CHECK(index >= 0 && index < dimension_attributes.size())
^
./tensorflow/core/util/tensor_format.h: In instantiation of 'T tensorflow::GetFilterDim(tensorflow::gtl::ArraySlice, tensorflow::FilterTensorFormat, char) [with T = long long int]':
./tensorflow/core/util/tensor_format.h:381:54:   required from here
./tensorflow/core/util/tensor_format.h:355:29: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
CHECK(index >= 0 && index < dimension_attribute.size())
^
./tensorflow/core/platform/macros.h:82:47: note: in definition of macro 'TF_PREDICT_FALSE'
#define TF_PREDICT_FALSE(x) (__builtin_expect(x, 0))
^
./tensorflow/core/util/tensor_format.h:355:3: note: in expansion of macro 'CHECK'
CHECK(index >= 0 && index < dimension_attribute.size())
^
Target //tensorflow/tools/pip_package:build_pip_package failed to build
Use --verbose_failures to see the command lines of failed build steps.
INFO: Elapsed time: 2688.392s, Critical Path: 200.30s
FAILED: Build did NOT complete successfully